# fika-ai-engineering-insights-bot

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .replit  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SUBMISSION.md  ai_insights_bot.py  architecture-diagram.txt  author_stats_agent.py  bot.py  botdata.db  dashboard.py  data_fetcher.ipynb  demo.py  demo_dev_report.py  dev_reports.db  diff_analyst_agent.py  docker-compose.yaml  docker-compose.yml  env_example  fetch_github_events.py  fika.db  fika_ai_insights.db  fika_insights.db  generate_fake_chart.py  graph_pipeline.py  insight_generator.py  insight_narrator_agent.py  langgraph_workflow.py  main.py  manage.py  pipeline.py  pyproject.toml  (+17 more)
LangGraph/: graph_builder.py
agents/: analyst.py  data_harvester.py  diff_analyst.py  diff_analyzer.py  dora_utils.py  harvester.py  insight_narrator.py  narrator.py  pipeline.py  query_agent.py  sample_data_harvester.py
app/: bot.py  requirements.txt  workflow.py
bot/: .env.example  __init__.py  agents.py  forecasting.py  github.py  influence_map.py  main.py  slack_bot.py  storage.py  visualization.py
bots/: chart_generator.py  slack_bot.py
data/: __init__.py  commits.json  fika.db  fika_ai_insights.db  pull_request.json  seed_data.json  seed_github_events.py
data_Harvester/: data_harvester_agent.py  fetcher.py  json_storage.py  utils.py
data_Harvester.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data_analyst_agent/: analytics.py  diff_agent.py
database/: __init__.py  crud.py  db.py
fika-productivity-bot/: .env  README.md  (+3 more)
(+106 files in other folders)
