[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerbiz"
version = "0.1.0"
description = "AI-powered developer analytics using LangChain + LangGraph"
readme = "README.md"
authors = [
    {name = "PowerBiz Team"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.dependencies]
langchain = ">=0.1.0"
langgraph = "*"
slack-bolt = "*"
slack-sdk = "*"
matplotlib = "*"
plotly = "*"
pydantic = ">=2.0.0"
sqlalchemy = "*"
python-dotenv = "*"
pandas = "*"
numpy = "*"
aiohttp = "*"
fastapi = "*"
uvicorn = "*"
openai = "*"
